fix pane getting selected on safari

--- a/packages/svelte/src/styles/base.css
+++ b/packages/svelte/src/styles/base.css
@@ -19,3 +19,8 @@
 .svelte-flow__zoom {
   z-index: 4;
 }
+
+.svelte-flow__edges {
+  -webkit-user-select: none;
+  user-select: none;
+}
